src/drivers/snapshots/active_storage__drivers__inmem__tests__validate_store-2.snap
---
source: src/drivers/inmem.rs
expression: driver
---
InMemoryDriver {
    files: Mutex {
        data: {
            "bar/file-2.txt": File {
                content: [],
                last_modified: SystemTime {
                    tv_sec: TV_SEC
                    tv_sec: TV_NSEC
                },
            },
        },
        poisoned: false,
        ..
    },
    directory: Mutex {
        data: {
            "bar": [
                "bar/file-2.txt",
            ],
        },
        poisoned: false,
        ..
    },
}
